xdgurl to ocs-url

--- a/application/modules/default/views/scripts/product/partials/ocs-url-helper.phtml
+++ b/application/modules/default/views/scripts/product/partials/ocs-url-helper.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 /**
  *  ocs-webserver
  *
@@ -20,10 +20,10 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 ?>
-<h3>XGDURL</h3>
-OpenDesktop now supports XDG-URL to make installation of resources easy.
+<h3>OCS-URL</h3>
+OpenDesktop now supports OCS-URL to make installation of resources easy.
 <br>
-To enable XDG-URL on your system, simply install the xdgurl tool from here: 
+To enable OCS-URL on your system, simply install the ocs-url tool from here:
 <br>
 <a target="_blank" href="https://www.linux-apps.com/p/1136805/">https://www.linux-apps.com/p/1136805/</a>
 <br>
@@ -31,8 +31,8 @@ To enable XDG-URL on your system, simply install the xdgurl tool from here:
 
 
 <h3>BROWSER</h3>
-After xdgurl is installed, just click the "Install" button on any supported fileformat.
+After ocs-url is installed, just click the "Install" button on any supported fileformat.
 <br>
-In Firefox a program selection window opens the first time you click on an Install button: Choose "xdgurl" as custom URL handler and tick "remember the file association".
+In Firefox a program selection window opens the first time you click on an Install button: Choose "ocs-url" as custom URL handler and tick "remember the file association".
 <br>
-If you don't get the program selection window or you are using another browser, please set the xdgurl program as custom URL handler for xdg:// scheme in the browser's settings.
+If you don't get the program selection window or you are using another browser, please set the ocs-url program as custom URL handler for ocs:// scheme in the browser's settings.
