--- a/application/modules/default/views/scripts/product/partials/productMoreProductsWidget.phtml
+++ b/application/modules/default/views/scripts/product/partials/productMoreProductsWidget.phtml
@@ -73,3 +73,13 @@ if ($countMoreProducts == 0) {
     </div>
 
 </div>
+<script type="application/javascript">
+    // tool tips
+    $('body').on('mouseenter', '.product-thumbnail, .supporter-thumbnail', function () {
+        $(this).popover('show');
+    });
+
+    $('body').on('mouseleave', '.product-thumbnail, .supporter-thumbnail', function () {
+        $(this).popover('hide');
+    });
+</script>
