--- a/application/modules/default/views/scripts/authorization/htmllogin.phtml
+++ b/application/modules/default/views/scripts/authorization/htmllogin.phtml
@@ -58,8 +58,7 @@ if (false === $auth->hasIdentity() || empty($member->username)) { ?>
                         <?= $formLogin->remember_me ?>
                         <?= $formLogin->login ?>
                     </form>
-                    <a href="/login/forgot" class="lightblue small">Forgot your
-                                                                    password?</a>
+                    <a href="/login/forgot" class="lightblue small">Forgot your password?</a>
                 </div>
                 <div class="form-footer">
                     <p><?= $this->translate('Or you can login with one of the following') ?></p>
