--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -28,78 +28,85 @@ $helperImage = new Default_View_Helper_Image();
 
 $auth = Zend_Auth::getInstance();
 $member = $getAuthUser->getAuthUser();
-?>
-   <?php echo $this->render('partials/header/metaheader.phtml'); ?>
+
+echo $this->render('partials/header/metaheader.phtml'); ?>
     <header id="page_header" xmlns="http://www.w3.org/1999/html">
-        <div class="container header"  style="position: relative;">
-       
-             <?php if (false === $auth->hasIdentity() && empty($member->username)) {
-                        $helperEncryptUrl = new Default_View_Helper_EncryptUrl();
-                        $redirectString = '/redirect/'.$helperEncryptUrl->EncryptUrl($_SERVER["REQUEST_URI"]);
-                        ?>
-                        <ul class="menu-nav-tabs absolute-right" style="position: absolute;bottom: 0px;">
-                            <li role="presentation" class="<?php echo(strpos($_SERVER["REQUEST_URI"], 'register') ? 'active' : '') ?>">
-                                <a href="/register">Register</a></li>
-                            <li role="presentation" class="<?php echo(strpos($_SERVER["REQUEST_URI"], 'login') ? 'active' : '') ?>">
-                                <a href="/login<?=$redirectString?>">Login</a>
-                            </li>
-                        </ul>
-                    <?php } ?>
-       
-        <section class="container">
+        <div class="container header" style="position: relative;">
+
+            <?php if (false === $auth->hasIdentity() && empty($member->username)) {
+                $helperEncryptUrl = new Default_View_Helper_EncryptUrl();
+                $redirectString = '/redirect/' . $helperEncryptUrl->EncryptUrl($_SERVER["REQUEST_URI"]);
+                ?>
+                <ul class="menu-nav-tabs absolute-right" style="position: absolute;bottom: 0px;">
+                    <li role="presentation"
+                        class="<?php echo(strpos($_SERVER["REQUEST_URI"], 'register') ? 'active' : '') ?>">
+                        <a href="/register">Register</a></li>
+                    <li role="presentation"
+                        class="<?php echo(strpos($_SERVER["REQUEST_URI"], 'login') ? 'active' : '') ?>">
+                        <a href="/login<?= $redirectString ?>">Login</a>
+                    </li>
+                </ul>
+            <?php } ?>
+
+            <section class="container">
             <section class="wrapper">
 
-                <section>
+                    <section>
 
-                    <figure class="logo-header">
-                        <a href="/">
-                            <img width="<?=$this->template['header-logo']['width']?>" border="0" src="<?=$this->template['header-logo']['image-src']?>">
-                        </a>
-                    </figure>
-                  
-                    <nav id="nav-top">
-                        <div class="pull-left col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                        </div>
+                        <figure class="logo-header">
+                            <a href="/">
+                                <img width="<?= $this->template['header-logo']['width'] ?>" border="0"
+                                     src="<?= $this->template['header-logo']['image-src'] ?>">
+                            </a>
+                        </figure>
 
-                        <div class="pull-right col-lg-7 col-md-7 col-sm-7 col-xs-7">
-                            <?php if ($auth->hasIdentity() && !empty($member->username)) { ?>
-                                <ul class="menu pull-right">
-                                    <li class="link relative profile-menu-container">
-                                        <a rel="profile-menu" class="menu-trigger">
-                                        <div class="absolute header-profile-image"><img
-                                                src="<?= $helperImage->Image($member->profile_image_url, array('width' => 30, 'height' => 30)) ?>"/>
-                                        </div>
-                                        <span><?= $member->username ?></span>
-                                        </a>
-                                        <ul class="profile-menu menu-dropdown">
-                                            <div class="dropdown-header"></div>
-                                            <li class="link first"><a href="/product/add/"><?= $this->translate('Add Product') ?></a>
-                                            </li>
-                                            <li class="link first"><a
-                                                    href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id, 'products') ?>"><?= $this->translate('My Products') ?></a>
-                                            </li>
-                                            <li class="link"><a
-                                                    href="/settings/"><?= $this->translate('My Settings') ?></a>
-                                            </li>
-                                            <li class="link"><a href="/logout/"><?= $this->translate('Logout') ?></a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            <?php } else { ?>
-                            <?php } ?>
-                            <form id="search" class="pull-right" action="/search">
-                                <input type="text" name="projectSearchText" class="content-search">
+                        <nav id="nav-top">
+                            <div class="pull-left col-lg-5 col-md-5 col-sm-5 col-xs-5">
+                            </div>
 
-                                <div class="icon-search-input absolute cursor-hand"
-                                     onclick="$('#search').submit()"></div>
-                            </form>
-                        </div>
-                    </nav>
+                            <div class="pull-right col-lg-7 col-md-7 col-sm-7 col-xs-7">
+                                <?php if ($auth->hasIdentity() && !empty($member->username)) { ?>
+                                    <ul class="menu pull-right">
+                                        <li class="link relative profile-menu-container">
+                                            <a rel="profile-menu" class="menu-trigger">
+                                                <div class="absolute header-profile-image"><img
+                                                            src="<?= $helperImage->Image($member->profile_image_url,
+                                                                array('width' => 30, 'height' => 30)) ?>"/>
+                                                </div>
+                                                <span><?= $member->username ?></span>
+                                            </a>
+                                            <ul class="profile-menu menu-dropdown">
+                                                <div class="dropdown-header"></div>
+                                                <li class="link first"><a
+                                                            href="/product/add/"><?= $this->translate('Add Product') ?></a>
+                                                </li>
+                                                <li class="link first"><a
+                                                            href="<?= $helperBuildMemberUrl->buildMemberUrl($member->member_id,
+                                                                'products') ?>"><?= $this->translate('My Products') ?></a>
+                                                </li>
+                                                <li class="link"><a
+                                                            href="/settings/"><?= $this->translate('My Settings') ?></a>
+                                                </li>
+                                                <li class="link"><a
+                                                            href="/logout/"><?= $this->translate('Logout') ?></a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                <?php } else { ?>
+                                <?php } ?>
+                                <form id="search" class="pull-right" action="/search">
+                                    <input type="text" name="projectSearchText" class="content-search">
+
+                                    <div class="icon-search-input absolute cursor-hand"
+                                         onclick="$('#search').submit()"></div>
+                                </form>
+                            </div>
+                        </nav>
+                    </section>
+
                 </section>
-
             </section>
-        </section>
 
             <section class="container">
                 <section class="wrapper">
@@ -110,7 +117,8 @@ $member = $getAuthUser->getAuthUser();
                     <?php } else { ?>
                     <span class="header_cat_link" id="header_cat_link"><a href="/community">/Community</a></span>
                     <?php } */ ?>
-                    <span class="header_cat_link" id="header_cat_link"><a href="/browse/cat/<?= isset($this->cat_id)?$this->cat_id:'all' ?>/order/latest">/<?= $helperFetchCategory->catTitle($this->cat_id) ?></a></span>
+                    <span class="header_cat_link" id="header_cat_link"><a
+                                href="/browse/cat/<?= isset($this->cat_id) ? $this->cat_id : 'all' ?>/order/latest">/<?= $helperFetchCategory->catTitle($this->cat_id) ?></a></span>
 
                 </section>
             </section>
@@ -124,4 +132,3 @@ $member = $getAuthUser->getAuthUser();
                 LoginContainer.update();
             });
         ');
-
