updated single sign on for github

--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -35,7 +35,7 @@ echo $this->render('partials/header/metaheader.phtml'); ?>
 
             <?php if (false === $auth->hasIdentity() && empty($member->username)) {
                 $helperEncryptUrl = new Default_View_Helper_EncryptUrl();
-                $redirectString = '/redirect/' . $helperEncryptUrl->EncryptUrl($_SERVER["REQUEST_URI"]);
+                $redirectString = '/redirect/' . $helperEncryptUrl->EncryptUrl(Zend_Controller_Front::getInstance()->getRequest()->getScheme() . '://' . Zend_Controller_Front::getInstance()->getRequest()->getHttpHost().$_SERVER["REQUEST_URI"]);
                 ?>
                 <ul class="menu-nav-tabs absolute-right" style="position: absolute;bottom: 0px;">
                     <li role="presentation"
