--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -22,6 +22,7 @@
 
 $users = $this->newUsers($limit = 216,'created_at','DESC');
 $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
+$url_param_redirect = isset($this->redirect) ? 'redirect/'.$this->redirect : null;
 ?>
   <link href="/theme/flatui/css/bootstrap/social-buttons.css" rel="stylesheet" type="text/css">
   <style>
@@ -47,7 +48,7 @@ $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
                 <div id="social-login-elements">
                   <div class="register-facebook">
                     <p class="small center light greylight">Login</p>
-                    <a  href="/login/github/" class="btn btn-block btn-social btn-github">
+                    <a  href="/login/github/<?=$url_param_redirect?>" class="btn btn-block btn-social btn-github">
                       <span class="fa fa-github"></span>
                       with Github
                     </a>
