--- a/application/modules/default/views/scripts/partials/propagateLogin.phtml
+++ b/application/modules/default/views/scripts/partials/propagateLogin.phtml
@@ -3,9 +3,7 @@
 $request =  Zend_Controller_Front::getInstance()->getRequest();
 $token = $request->getCookie(Default_Model_SingleSignOnToken::ACTION_LOGIN, null);
 $modelSso = new Default_Model_SingleSignOnToken();
-if (isset($token) AND $modelSso->isValidToken($token, Default_Model_SingleSignOnToken::ACTION_LOGIN)) :
-//    $token_data = $modelSso->getValidTokenData($token, Default_Model_SingleSignOnToken::ACTION_LOGIN);
-//    $member_id = $token_data['token_member_id'];
+if (isset($token) AND $modelSso->isValid($token)) :
     $store_config_list = Zend_Registry::get('application_store_config_list');
 
     $urls = '';
