--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -160,9 +160,11 @@ $categoryPath[] = $valueCatId;
                                                class="required form-control valid"
                                                type="text"
                                                name="title"
+                                               pattern="[^'\x22]+"
                                                <?php //pattern="^[ .\-&_A-z0-9]{1,}$" ?>
                                                <?php //  pattern="^[^\\'\^;*!\u0022\$]{1,}$" ?>
-                                               value="<?= $this->form->title->getValue() ?>"
+                                               value="<?= $this->escape($this->form->title->getValue()) ?>"
+                                               title="Please use only letters."
                                                maxlength="60"
                                                aria-required="true"
                                                aria-invalid="false"
